<resources>
    <string name="app_name">OpenProject</string>
    <string name="kakao_app_key">1705e1277dbe2d3091bd5021d6a39176</string>
    <string name="facebook_app_id">171597563533879</string>
    <string name="fb_login_protocol_scheme">fb171597563533879</string>
    <string name="text_for_login_kakao_account">Log in with Kakao</string>
    <string name="text_login_fragment">Login with Fragment</string>
    <string name="text_login_activity">Login with Activity</string>
    <string name="logout">로그아웃</string>
    <string name="service_title">사장님을 위한 사장님에 의한 사장님의 서비스</string>
    <string name="request_email_or_phone">이메일 또는 휴대폰 번호 입력</string>
    <string name="or">또는</string>
    <string name="change_password">비밀번호 재설정</string>
    <string name="police_temp_content">당사 데이터 정책이 변경됩니다. 여기에서 당사의 새로운 데이터 정책을 확인할 수 있습니다.
데이터 정책
최종 수정일: 2016년 9월 29일 목요일
Facebook은 더욱 개방적이고 연결된 세상을 만들기 위해 다양한 공유 기능을 제공합니다. 본 정책은 Facebook이 수집하는 정보의 종류와 사용 및 공유 방법을 설명하며, 공개 범위 기본 사항에서 추가 도구와 정보를 확인할 수 있습니다.
본 정책은 별도의 개인정보취급방침이 없거나 본 정책에 연결되는 모든 Facebook 브랜드, 제품 및 서비스(이하 "Facebook 서비스" 또는 "서비스")에 적용됩니다.
I. Facebook에서 수집하는 정보의 종류
사용하는 서비스에 따라 회원님 관련 정보 또는 회원님이 제공한 정보에서 수집하는 내용이 달라집니다.
회원님의 활동과 회원님이 제공한 정보. Facebook은 계정 가입, 작성 또는 공유, 메시지 또는 다른 사람과의 커뮤니케이션 등 회원님이 서비스를 이용할 때 제공하는 콘텐츠와 기타 정보를 수집합니다. 여기에는 사진 촬영 장소나 파일 생성 날짜와 같이 회원님이 제공한 콘텐츠 또는 콘텐츠에 포함된 정보가 포함될 수 있습니다. 또한 회원님이 보거나 이용하는 콘텐츠의 유형, 회원님의 활동 빈도나 기간과 같이 회원님의 서비스 이용에 관한 정보도 수집됩니다.
다른 사람의 활동과 다른 사람이 제공한 정보. Facebook은 또한 다른 사람이 회원님 사진을 공유하거나, 회원님에게 메시지를 보내거나, 회원님의 연락처 정보를 동기화하거나 가져올 때 등 Facebook 서비스를 이용할 때 제공하는 콘텐츠 및 정보(회원님에 관한 정보 포함)를 수집합니다.
네트워크 및 연결. Facebook은 회원님이 가장 많이 연락하는 사람 또는 자주 공유하는 그룹 등 교류하는 사람과 그룹에 관한 정보 및 교류 방법에 관한 정보를 수집합니다. 또한 주소록 등 이러한 정보를 기기에서 업로드, 동기화 또는 가져올 경우 연락처 정보 역시 수집합니다.
결제 관련 정보. Facebook에서 상품을 구매하거나 게임 아이템을 구매하거나 기부하는 등 구매 또는 금융 거래에 Facebook 서비스를 사용하는 경우 구매 또는 거래에 관한 정보가 수집됩니다. 여기에는 신용카드 또는 직불카드 번호 및 기타 카드 정보, 기타 계정 및 인증 정보, 청구, 배송 및 연락처 정보와 같은 결제 정보가 포함됩니다.
기기 정보. Facebook은 회원님이 부여한 권한에 따라 회원님이 서비스를 설치하거나 이용하는 컴퓨터, 휴대폰 또는 다른 기기의 정보를 수집합니다. 또한 여러 기기에서 일관된 서비스를 제공하기 위해 다른 기기에서 수집한 정보를 연결할 수 있습니다. 수집되는 정보의 예는 다음과 같습니다.
운영 체제, 하드웨어 버전, 기기 설정, 파일 및 소프트웨어 이름과 유형, 배터리 및 신호 강도, 기기 식별자와 같은 속성.
GPS, Bluetooth 또는 Wi-Fi 신호를 통한 구체적인 지리적 위치를 포함한 기기 위치.
이동통신사 이름 또는 ISP, 브라우저 유형, 언어 및 시간대, 휴대폰 번호와 IP 주소 등의 연결 정보.
서비스를 이용하는 웹사이트와 앱의 정보. Facebook 서비스를 이용하는 타사 웹사이트 및 앱(좋아요 버튼 또는 Facebook 로그인을 제공하거나 Facebook 측정 및 광고 서비스를 이용하는 경우)을 방문하거나 사용할 때 정보가 수집됩니다. 여기에는 회원님이 방문하는 웹사이트 및 앱에 관한 정보, 해당 웹사이트 및 앱에서 회원님이 서비스를 이용한 정보, 앱 또는 웹사이트 개발자나 게시자가 회원님 또는 Facebook에 제공하는 정보가 포함됩니다.
타사 파트너의 정보. Facebook은 공동 서비스 제공 시 파트너에서 제공하는 정보, 회원님이 광고주와 경험했거나 교류한 내용에 관해 광고주가 제공하는 정보 등 타사 파트너로부터 회원님과 Facebook 내외에서 진행한 회원님의 활동에 관한 정보를 제공받습니다.
Facebook 계열사. Facebook은 Facebook이 소유하거나 운영하는 회사로부터 해당 회사의 약관과 정책에 따라 회원님에 관한 정보를 제공받습니다. 이러한 회사와 해당 회사의 개인정보취급방침에 대해 자세히 알아보세요.
II. Facebook에서 정보를 활용하는 방법
Facebook은 모두가 참여하기 쉬우면서도 각자에게 맞춤화된 환경을 제공하기 위해 최선을 다하고 있습니다. Facebook 서비스의 제공과 지원을 위해 다음과 같이 가능한 정보를 모두 활용합니다.
서비스 제공, 개선, 개발. Facebook은 이 정보를 활용하여 회원님이 서비스를 어떻게 이용하고 교류하는지, 회원님이 서비스 내외에서 어떤 사람과 내용에 연결하고 관심을 보이는지 이해함으로써 회원님을 위해 서비스를 제공하고 콘텐츠를 맞춤화하고 콘텐츠를 추천할 수 있습니다.
또한 이 정보를 활용하여 회원님을 위한 빠른 서비스와 추천을 제공할 수 있습니다. 예를 들어 회원님 친구가 사진을 올릴 때 회원님의 프로필 사진 및 회원님이 태그된 다른 사진에서 취합한 정보와 비교하여 회원님의 친구에게 사진에 회원님을 태그하라고 추천할 수 있습니다. 회원님은 "타임라인과 태그달기" 설정을 이용하여 다른 사용자에게 사진에서 회원님을 태그하라고 추천하도록 허용할지 관리할 수 있습니다.
Facebook은 체크인을 돕거나 지역 이벤트 또는 쿠폰을 찾고 친구가 근처에 있을 때 알리는 등 위치 정보를 이용하여 회원님과 다른 회원을 위한 맞춤 서비스를 제공할 수 있습니다.
Facebook은 제품 및 서비스를 개선하고, 새로운 제품과 기능을 개발하고, 감사를 수행하며, 문제를 해결하기 위해 설문조사와 연구를 수행하고, 개발 중인 기능을 테스트하고, 보유한 정보를 분석할 수 있습니다.
직접 연락. Facebook은 회원님의 정보를 활용하여 마케팅 자료를 제공하고 서비스, 정책 및 약관에 대한 내용을 보내드릴 수 있습니다. 또한 회원님의 연락에 대응하기 위해 회원님의 정보를 사용할 수 있습니다.
광고 및 서비스 표시 및 측정. Facebook은 서비스 내외에서 회원님에게 관련 광고를 표시하고 광고 및 서비스의 효과와 도달 범위를 측정하기 위해 광고와 측정 시스템을 개선할 수 있도록 보유한 정보를 활용합니다. Facebook 서비스 내 광고에 대한 정보와 적절한 광고를 표시하기 위해 사용되는 정보 범위를 직접 관리하는 방법을 자세히 알아보세요.
안전 및 보안 강화. Facebook은 의심스러운 활동 조사 또는 약관이나 정책 위반 확인 등 계정을 인정하고 활동 내역을 확인하며 서비스 내외의 안전 및 보안을 강화하기 위해 정보를 활용합니다. Facebook은 엔지니어 팀, 자동 시스템, 암호화 및 기계 학습과 같은 고급 기술을 사용하여 계정을 보호하기 위해 최선을 다하고 있으며, 계정에 추가적인 보안을 제공하기 위해 간편하게 사용할 수 있는 보안 도구를 제공합니다. Facebook의 보안 강화에 대해 자세히 알아보려면 Facebook 보안 고객 센터를 방문하세요.
Facebook은 Facebook 서비스와 본 정책 섹션에 설명된 각 서비스 이용을 지원하기 위해 쿠키 및 유사한 테크놀로지를 사용합니다. 자세한 정보는 Facebook의 쿠키 정책을 읽어보세요.
III. 정보 공유 방식
Facebook 서비스에서 공유
Facebook 서비스는 다양한 사람들이 서로 연결하고 공유하는 공간입니다. Facebook에서는 이를 위해 다음과 같은 방법으로 회원님의 정보를 공유합니다.
회원님이 공유하고 교류한 사람.
Facebook 서비스를 이용하여 공유 또는 교류할 때 누가 볼 수 있는지 직접 선택할 수 있습니다. 예를 들어 회원님은 Facebook에 게시물을 올릴 때 맞춤화된 그룹, 모든 친구 또는 그룹 멤버 등 게시물에 대한 공개 대상을 직접 선택하며, Messenger를 사용할 때도 마찬가지로 사진이나 메시지를 보낼 대상을 직접 선택합니다.
전체 공개 정보란 회원님의 전체 공개 프로필의 정보 또는 Facebook 페이지나 다른 공개 포럼에서 공유하는 콘텐츠와 같이 모든 사람과 공유하는 정보를 말합니다. 전체 공개 정보는 Facebook 서비스 내외의 모든 사람이 볼 수 있으며 온라인 검색 엔진, API 및 TV와 같은 오프라인 미디어를 통해 노출되거나 액세스될 수 있습니다.
경우에 따라 회원님이 공유하고 대화하는 상대가 이 콘텐츠를 다운로드한 후 서비스 내외에서 다른 사람과 다시 공유할 수 있습니다. Facebook에서 다른 사람의 게시물에 댓글을 남기거나 좋아요를 누른 경우 그 사람이 회원님의 댓글이나 좋아요를 볼 수 있는 대상을 결정하게 됩니다. 해당 공개 범위가 전체 공개인 경우 회원님의 댓글도 전체 공개로 설정됩니다.
다른 사람이 회원님에 관해 공유한 콘텐츠를 볼 수 있는 사람. 다른 사람이 Facebook 서비스를 이용하여 자신이 원하는 대상에게 회원님에 관한 콘텐츠를 공유할 수 있습니다. 예를 들어 회원님이 나온 사진을 공유하고, 게시물 내 위치에 회원님을 언급하거나 태그하고, 회원님이 직접 공유한 회원님 관련 정보를 다시 공유할 수 있습니다. 다른 사람의 게시물에 관해 우려되는 부분이 있다면 소셜 신고를 통해 쉽고 빠르게 믿을 수 있는 사람으로부터 도움을 받을 수 있습니다. 더 알아보기.
Facebook 서비스에 포함되어 있거나 서비스를 이용한 앱, 웹사이트 및 타사 통합. Facebook 서비스에 포함되어 있거나 서비스를 이용한 타사 앱, 웹사이트 또는 기타 서비스를 사용하는 경우 해당 타사가 회원님이 게시 또는 공유한 정보를 입수할 수 있습니다. 예를 들어 Facebook 친구와 게임을 하거나 웹사이트에서 Facebook 댓글 달기 또는 공유하기 버튼을 사용하는 경우, 게임 개발자나 웹사이트가 게임 내 회원님의 활동에 관한 정보를 얻거나 회원님이 Facebook에서 해당 웹사이트를 통해 공유한 댓글이나 링크 정보를 받을 수 있습니다. 또한 이러한 타사 서비스를 다운로드하거나 이용하면 타사가 사용자 이름이나 사용자 ID, 연령대, 국가/언어, 친구 리스트는 물론 회원님이 친구와 공유한 정보를 포함한 회원님의 전체 공개 프로필에 액세스할 수 있습니다. 이러한 앱, 웹사이트 또는 통합 서비스에서 수집되는 정보는 해당 타사의 자체 약관 및 정책을 따릅니다.
회원님 또는 다른 사람이 이러한 앱 및 웹사이트에 공유하는 회원님의 정보를 관리할 수 있는 방법을 자세히 알아보세요.
Facebook 계열사 내에서 공유. Facebook은 회원님에 관한 정보를 Facebook 계열사끼리 공유할 수 있습니다. Facebook 계열사에 대해 자세히 알아보세요.
새로운 소유자. Facebook 서비스 또는 서비스 자산에 대한 소유권이나 관리자가 변경되는 경우 회원님에 관한 정보를 새로운 소유자에게 이전합니다.
타사 파트너 및 고객과 공유.
Facebook은 서비스 제공 및 개선을 돕는 타사 또는 Facebook 광고 또는 관련 제품을 이용하는 타사와 함께 협력하여 비즈니스를 운영하고 전 세계 사용자에게 무료 서비스를 제공하고 있습니다.
다음과 같은 타사에 회원님에 관한 정보를 공유할 수 있습니다.
광고, 측정 및 분석 서비스(개인을 식별할 수 없는 정보만 공유). Facebook은 서비스의 다른 정보처럼 광고에서도 관련성 높고 흥미로운 내용을 제공하려는 목적으로, 각 사용자에게 관련성 높은 광고를 표시하기 위해 모든 정보를 활용하고 있습니다. Facebook은 회원님이 허락 없이 개인 식별 정보(이름 또는 이메일 주소 등 그 자체만으로 회원님에게 연락하거나 회원님을 식별할 수 있는 정보)를 광고, 측정 또는 분석 파트너에게 공유하지 않습니다. Facebook은 개인 식별 정보가 없는 경우 또는 정보가 통합되어 개인 식별이 불가능한 경우에 한해 광고의 도달 범위나 효과에 관한 정보를 파트너와 공유할 수 있습니다. 예를 들어 Facebook에서 파트너가 타겟이나 고객을 파악할 수 있도록 광고 성과, 광고 조회 횟수, 광고 조회 후 앱 설치 횟수 또는 개인을 식별할 수 없는 인구 통계학적 특성(25세 여성, 인천 거주, 소프트웨어 엔지니어링에 관심 있음 등)을 제공할 수 있습니다. 다만 광고주가 Facebook의 광고주 가이드라인을 준수할 것에 동의한 경우에 한합니다.
회원님의 광고 기본 설정을 검토하여 Facebook에서 특정 광고가 표시되는 이유를 확인하세요. Facebook 광고 기본 설정을 조정하여 광고 환경을 직접 제어 및 관리할 수 있습니다.
공급업체, 서비스 공급자 및 기타 파트너. Facebook은 기술 인프라 서비스 제공, 서비스 이용 분석, 광고 및 서비스 효과 측정, 고객 서비스 제공, 결제 진행 또는 학술 연구 및 조사 수행 등 전반적으로 Facebook 비즈니스를 지원하는 공급업체, 서비스 공급자 및 기타 파트너에게 정보를 전달할 수 있습니다. 이러한 파트너는 반드시 본 데이터 정책 및 Facebook과 해당 파트너 간 계약에 일관되는 방식으로 엄격한 기밀 의무를 준수해야 합니다.
IV. 내 정보를 관리 또는 삭제하는 방법
활동 로그 도구를 사용하면 Facebook을 사용할 때 공유하는 콘텐츠와 정보를 관리할 수 있으며, 내 정보 다운로드 도구를 사용하여 Facebook 계정에 연결된 정보를 다운로드할 수도 있습니다.
Facebook은 회원님과 앞서 언급한 사람들을 포함해 다른 사람들에게 기능과 서비스를 제공하기 위해 필요한 기간만큼 데이터를 저장합니다. Facebook이 제품 및 서비스 제공을 위해 데이터를 더 이상 필요로 하지 않는 이상, 계정에 연결된 정보는 계정을 삭제할 때까지 유지됩니다.
계정은 언제든지 삭제할 수 있습니다. 계정을 삭제하면 사진이나 상태 업데이트 등 회원님이 게시한 콘텐츠도 삭제됩니다. 계정을 삭제하지 않고 Facebook 이용을 일시적으로 중단하려면 계정을 비활성화하면 됩니다. 계정 비활성화 또는 삭제에 대해 자세히 알아보려면 여기를 클릭하세요. 다른 사람이 회원님에 관해 공유하는 정보는 회원님 계정의 일부가 아니므로 회원님의 계정을 삭제해도 함께 삭제되지 않습니다.
V. 법적 요청에 대한 대응과 피해 방지
Facebook은 법적인 요청(예: 수색 영장, 법원 명령서, 소환장 등)이 수반되고 법의 집행을 위해 필요하다고 판단될 경우에 한 해 회원님의 정보에 액세스하고 이를 보존하며 공유할 수 있습니다. 여기에는 미국 외 지역 관할권에서 법적 요청이 수반되고, 해당 관할권의 법에 의해 필요성이 인정되며, 그 지역 내의 사용자들에게 영향을 미침과 동시에 국제적으로 용인되는 기준에 부합한다고 판단될 때 해당 관할권의 요청을 받아들이는 경우가 포함됩니다. 또한 Facebook이 필요하다고 판단할 경우 정보에 액세스하고 정보를 보존하고 공유할 수 있습니다. 여기에는 사기 또는 다른 불법 행위를 예방하고 이에 대해 조치를 취하거나, 수사 과정에서 Facebook, 회원님, 다른 사람들을 보호하거나, 생명을 보호하고 상해를 막기 위한 경우 등이 포함됩니다. 예를 들어 서비스 내외에서 사기와 악용을 방지하기 위해 회원님 계정의 신뢰성에 관한 정보를 타사 파트너에게 제공할 수 있습니다. Facebook을 이용한 구매 활동과 관련된 금융 거래 데이터를 포함해 Facebook이 수집하는 회원님의 정보는 법적인 요청이나 의무, 정부 조사, Facebook 약관과 정책에 대한 잠재적 위반에 대한 조사의 대상이 되는 경우 또는 다른 피해를 방지하기 위한 목적으로 장기간 액세스, 처리, 보관될 수 있습니다. 또한 Masquerade는 악용 사례 또는 기타 Masquerade 약관에 대한 위반 행위의 반복을 막기 위해 Masquerade 약관 위반으로 비활성화된 계정의 정보를 최소 1년 이상 보유할 수 있습니다.
VI. 글로벌 서비스 운영 방식
Facebook은 본 정책에서 설명한 목적을 위해 계열사 내부에서 또는 타사를 대상으로 정보를 공유할 수 있습니다. 예를 들어 유럽 경제 구역("EEA") 내에서 수집된 정보가 본 정책에 설명된 목적을 위해 EEA 외부의 국가로 전달될 수 있습니다. Facebook은 유럽연합 집행위원회에서 승인한 표준 계약 조항을 활용하고, 유럽 연합 법률에서 허용하는 기타 수단을 채택하며, EEA에서 미국 및 기타 국가로 데이터를 전송하기 위한 합법적인 사용자 동의를 얻습니다.
질문이나 우려 사항이 있을 경우 아래 제공된 정보에 따라 Facebook에 문의할 수 있습니다. 또한 Facebook은 개인정보취급방침 및 관례에 관한 분쟁이 있을 경우 TRUSTe를 통해 해결할 수 있습니다. TRUSTe에 문의하려면 TRUSTe 웹사이트를 이용하세요.
VII. 정책 수정 사항 안내
정책의 내용이 변경되는 경우 서비스 이용을 계속하기 전에 회원님이 변경된 정책을 확인하고 의견을 제공할 수 있도록 안내해드립니다.
VIII. Facebook에 문의하는 방법
Facebook에서 개인 정보를 관리하는 방법은 공개 범위 기본 사항에서 확인하세요.
본 정책에 관한 질문이 있는 경우 다음으로 연락해주세요.
미국 또는 캐나다 거주 시
Facebook, Inc.에 온라인으로 연락하거나 우편으로 문의하세요.

Facebook, Inc.
1601 Willow Road
Menlo Park, CA 94025
다른 지역 거주 시
Facebook Ireland Ltd.에서 회원 정보에 대한 데이터를 담당합니다. 온라인으로 연락하거나 우편으로 문의하세요.

Facebook Ireland Ltd.
4 Grand Canal Square, Grand Canal Harbour
Dublin 2, Ireland</string>
    <string name="police_title">Open을 사용하려면 약관을 확인 하세요</string>
    <string name="police_content">Open 약관에 동의하고 데이터 정책을 읽고 이해하신 것으로 간주됩
니다. open에서 SNS알림을 받을 수 있으며 언제든지 수신을 거부 할
수 있습니다.</string>
    <string name="service_agreement_title">서비스 약관</string>
    <string name="agree">동의</string>
    <string name="disagree">동의하지 않음</string>
    <string name="data_police_title">데이터 정책</string>
    <string name="location_tools_title">위치 도구</string>
    <string name="third_party_tool_title">제 3자 도구</string>
    <string name="all_agree_title">전체 동의</string>
    <string name="view_use_agreement">+약관보기</string>
    <string name="nickname_title">닉네임</string>
    <string name="request_nickname">닉네임을 입력해 주세요</string>
    <string name="email_title">이메일</string>
    <string name="request_email">이메일을 입력해 주세요</string>
    <string name="password_title">비밀번호</string>
    <string name="request_password">비밀번호를 입력해 주세요</string>
    <string name="password_confirm_title">비밀번호 확인</string>
    <string name="request_password_confirm">비밀번호를 다시 한번 입력해 주세요</string>
    <string name="gender_choice_title">성별확인</string>
    <string name="gender_male">남성</string>
    <string name="gender_female">여성</string>
    <string name="authorization_title">휴대폰 본인인증을 해주세요</string>
    <string name="contry_title">국가</string>
    <string name="phone_number_title">휴대폰 번호</string>
    <string name="request_authorization_comfirm_number">휴대폰 인증번호를 입력해 주세요</string>
    <string name="authorization_comfirm_number_title">인증번호</string>
    <string name="authorization_confirm_number_hint">0000</string>
    <string name="store_information_title">힘내세요! 마지막 페이지입니다!</string>
    <string name="store_information_name_title">대표 매장명</string>
    <string name="request_store_name">매장명을 입력해주세요.</string>
    <string name="request_store_sector">업종</string>
    <string name="store_information_main_category">대분류</string>
    <string name="store_information_middle_category">중분류</string>
    <string name="store_information_small_category">소분류</string>
    <string name="store_information_address_title">매장주소</string>
    <string name="request_address">매장 주소를 입력해주세요</string>
    <string name="store_information_address_detail_title">상세주소</string>
    <string name="request_address_detail">상세주소를 입력해주세요</string>
    <string name="store_information_pre_sector_title">예상 업종</string>
    <string name="store_information_pre_location_title">예상 매장위치</string>
    <string name="request_store_information_pre_location">구˙동 을 입력해주세요</string>
    <string name="store_information_pre_date_title">예상 창업달을 적어주세요</string>
    <string name="request_store_information_pre_date">예상 창업달 입력</string>
</resources>