<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreInformationPreActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/store_information_title"/>

            <TextView
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/store_information_pre_sector_title"/>

            <LinearLayout
                android:padding="10dp"
                android:id="@+id/StoreInformationPreCategoryLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/StoreInformationPreMainCategoryEdit1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/store_information_main_category"/>

                <EditText
                    android:id="@+id/StoreInformationPreMiddleCategoryEdit1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/store_information_middle_category"/>

                <EditText
                    android:id="@+id/StoreInformationPreSmallCategoryEdit1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/store_information_small_category"/>

            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:id="@+id/StoreInformationPreCategoryLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/StoreInformationPreMainCategoryEdit2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/store_information_main_category"/>

                <EditText
                    android:id="@+id/StoreInformationPreMiddleCategoryEdit2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/store_information_middle_category"/>

                <EditText
                    android:id="@+id/StoreInformationPreSmallCategoryEdit2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/store_information_small_category"/>

            </LinearLayout>
            <LinearLayout
                android:padding="10dp"
                android:id="@+id/StoreInformationPreCategoryLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/StoreInformationPreMainCategoryEdit3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/store_information_main_category"/>

                <EditText
                    android:id="@+id/StoreInformationPreMiddleCategoryEdit3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/store_information_middle_category"/>

                <EditText
                    android:id="@+id/StoreInformationPreSmallCategoryEdit3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/store_information_small_category"/>

            </LinearLayout>

            <ImageView
                android:padding="10dp"
                android:id="@+id/StoreInformationPreCategoryAddBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/memo"/>

            <TextView
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/store_information_pre_location_title"/>

            <EditText
                android:padding="10dp"
                android:id="@+id/StoreInformationPreAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/request_store_information_pre_location"/>

            <TextView
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/store_information_pre_date_title"/>

            <TextView
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_store_information_pre_date"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>

            <ImageView
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/next"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>