<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="user.com.openproject.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/LoginLogoImg"
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/service_title"
            android:paddingBottom="20dp"/>

        <FrameLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.kakao.usermgmt.LoginButton
                android:id="@+id/LoginKakaoBtn"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <ImageView
                android:id="@+id/LoginFakeKakaoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/kakaologin"/>

        </FrameLayout>


        <FrameLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/LoginFacebookBtn"
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <ImageView
                android:id="@+id/LoginFakeFacebookBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/facebooklogin"/>


        </FrameLayout>


        <FrameLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
                android:id="@+id/LoginNaverBtn"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <ImageView
                android:id="@+id/LoginFakeNaverBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/naverlogin"/>

        </FrameLayout>



        <EditText
            android:id="@+id/LoginIdEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/request_email_or_phone"/>

        <EditText
            android:id="@+id/LoginPwEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/request_password"/>

        <ImageView
            android:paddingTop="10dp"
            android:id="@+id/LoginLoginBtn"
            android:src="@drawable/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View style="@style/Divider"
                android:layout_gravity="center"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/or"/>
            <View style="@style/Divider"
                android:layout_gravity="center"
                android:layout_weight="1"/>

        </LinearLayout>

        <ImageView
            android:paddingTop="10dp"
            android:id="@+id/LoginRegisterBtn"
            android:src="@drawable/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingTop="10dp"
            android:id="@+id/LoginPwChangeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/change_password"/>


    </LinearLayout>

</RelativeLayout>
